--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^0.12.1",
-    "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2"
+    "npm-run-all": "^4.1.5"
   },
   "dependencies": {
     "nunjucks": "^3.2.3",
